--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Chat with Ted</title>
+  <title>Chat with your assistant</title>
   <link rel="icon" href="https://image.flaticon.com/icons/svg/2597/2597330.svg">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -180,7 +180,7 @@
   <section class="msger">
     <header class="msger-header">
       <div class="msger-header-title">
-        <i></i> <p style="font-size:22px;"><b>TED </b><p><i></i>
+        <i></i> <p style="font-size:22px;"><b>Chat </b><p><i></i>
       </div>
     </header>
 
@@ -190,12 +190,12 @@
 
         <div class="msg-bubble">
           <div class="msg-info">
-            <div class="msg-info-name">Ted</div>
+            <div class="msg-info-name">Assistant</div>
             <div class="msg-info-time">12:45</div>
           </div>
 
           <div class="msg-text">
-            Hey, I am Ted. Type below to talk to me...
+            Hey, I am your AI-empowerd medical assistant. Type below to talk to me...
           </div>
         </div>
       </div>
@@ -231,7 +231,7 @@
     // Icons made by Freepik from www.flaticon.com
     const BOT_IMG = "https://image.flaticon.com/icons/svg/2597/2597330.svg";
     const PERSON_IMG = "https://image.flaticon.com/icons/svg/3048/3048122.svg";
-    const BOT_NAME = "Ted";
+    const BOT_NAME = "Assistant";
     const PERSON_NAME = "You";
 
     msgerForm.addEventListener("submit", event => {
@@ -306,8 +306,6 @@
 
   </script>
   <p style="position: fixed;bottom: 0;left: 5px; bottom: 14px;font-size: 14px;"><a href="/">Go to Main Page</a></p>
-
-  <p style="position: fixed;bottom: 0;left: 610px;font-size: 14px;">Created by <a target='_blank' href="https://karan-malik.github.io">Karan Malik</a>,Copyright &copy; 2020 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Project Github: <a target="_blank" href="https://github.com/Karan-Malik/Chatbot">Chatbot</a> </p>
 
 </body>
 
