--- a/chatbot/templates/main.html
+++ b/chatbot/templates/main.html
@@ -1,9 +1,12 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Ted, A Deep-Learning Chatbot</title>
+    <title> Chatbot</title>
 <link rel="icon" href="https://image.flaticon.com/icons/svg/2597/2597330.svg">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+
 <style media="screen">
 
 /*body{
@@ -70,16 +73,72 @@ text-align: justify;
   <!--<img src="https://media.istockphoto.com/photos/light-blue-background-with-pattern-picture-id624409380?k=6&m=624409380&s=612x612&w=0&h=XYHFBLtqTp3EMuKDtJMzTW5wTzkFbalhfArb14U6mWI=" style=" height: 770px; width: 1550px; opacity: 0.7; position: fixed; left: 0px; top: 0px;"> -->
     <img src="https://i.gifer.com/3q63.gif" height="600" width="320" style="position: fixed; left: 70px; top: 120px;">
 
-    <h1 style=" f"><b>Hi, I am Ted!</b></h1>
-    <h2><b>Your Deep Learning Chatbot</b></h2>
+    <h1 style=" f"><b>Hi,{{session.username}}!</b></h1>
+    <h2><b>Your AI-Empowered Chatbot</b></h2>
 
+   <button class="btn btn-primary float-right" data-toggle="modal" data-target="#myModal">record your medical Details</button>
+    
+
+    <div id="myModal" class="modal fade" role="dialog" data-backdrop="static">
+      <div class="modal-dialog">
+          <div class="modal-content">
+ 
+              
+            <div class="modal-header">
+              <h5 class="modal-title text-primary" style="align-content: center;">Please Add here</h5>    
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            
+
+              <div class="modal-body">
+                <div class="msg">{{ msg }}</div>
+
+                <form action="{{ url_for('add')}}" method="POST">
+                      <div class="form-group">
+                        <label>  name </label>
+                        <input type="text" name="name" class="form-control" id="exampleFormControlInput1">
+                      </div>
+
+                      <div class="form-group">
+                          <label>birth_date </label>
+                          <input type="date" name="birth_date" class="form-control" id="exampleFormControlInput1" >
+                      </div>
+
+                      <div class="form-group">
+                          <label>Gender</label>
+                          <input type="text" name="gender" class="form-control" id="exampleFormControlInput1" >
+                        </div>
+                        <div class="form-group">
+                          <label>Weight</label>
+                          <input type="text" name="weight"  class="form-control" id="exampleFormControlInput1" >
+                        </div>
+                        <div class="form-group">
+                          <label>Medical_Condition</label>
+                          <input type="text" name="medical_condition"  class="form-control" id="exampleFormControlInput1" >
+                        </div>
+
+
+                        <button type="submit" class="btn btn-primary mb-2">Save</button>
+                   
+                    </form>
+
+
+              </div>
+          </div>
+      </div>
+    </div>
+
+  </div>
     <div class="boxed">
-  I am a multi-purpose chatbot, who can chat with you and help with your daily tasks. I can access google search , tell the weather, set a timer and much more. To view a complete list of my features and how to access them, message 'help' on the chat screen.
+      I am a chatbot design to assist patients of breast cancer , who can chat with you and help you through the process of getting better treatment and overall your experience as a patient of breat cnacer. I can answer questions and queries related to breast cancer  , recommend you hospitals to get treatments ,help you set a healthy lifestyle and much more.
+<input  style="position: center;bottom: 50px;" id="chat" type="button" value="Let's Chat" onclick="window.open('/chat','_self')">
+</div><br>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
-<input id="chat" type="button" value="Let's Chat" onclick="window.open('/chat','_self')">
-</div>
-
-<p style="position: fixed;bottom: 0;left: 770px;font-size: 14px; color: black;">Created by <a target='_blank' href='https://karan-malik.github.io'>Karan Malik</a>,Copyright &copy; 2020 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Project Github: <a target="_blank" href="https://github.com/Karan-Malik/Chatbot">Chatbot</a></p>
 
   </body>
 </html>
